--- a/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Mouse.kext/Contents/Info.plist
+++ b/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Mouse.kext/Contents/Info.plist
@@ -5,15 +5,15 @@
 	<key>BuildMachineOSBuild</key>
 	<string>14D72i</string>
 	<key>CFBundleExecutable</key>
-	<string>VoodooPS2Controller</string>
+	<string>VoodooPS2Mouse</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.8.13, Copyright Apple Computer, Inc. 2000-2003, David Elliot 2007, RehabMan 2012-2013</string>
+	<string>1.8.13, Copyright Apple Computer, Inc. 2000-2004, Slice 2010, RehabMan 2012-2013</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.rehabman.voodoo.driver.PS2Controller</string>
+	<string>org.rehabman.voodoo.driver.PS2Mouse</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Voodoo PS/2 Controller</string>
+	<string>Voodoo PS/2 Mouse</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
@@ -38,51 +38,56 @@
 	<string>6A2008a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>ACPI PS/2 Nub</key>
+		<key>ApplePS2Mouse</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>org.rehabman.voodoo.driver.PS2Controller</string>
+			<string>org.rehabman.voodoo.driver.PS2Mouse</string>
+			<key>HIDPointerAccelerationType</key>
+			<string>HIDTrackpadAcceleration</string>
+			<key>HIDScrollAccelerationType</key>
+			<string>HIDTrackpadScrollAcceleration</string>
 			<key>IOClass</key>
-			<string>AppleACPIPS2Nub</string>
-			<key>IONameMatch</key>
-			<array>
-				<string>PNP0303</string>
-				<string>PNP030B</string>
-			</array>
+			<string>ApplePS2Mouse</string>
 			<key>IOProviderClass</key>
-			<string>IOACPIPlatformDevice</string>
-			<key>MouseNameMatch</key>
-			<array>
-				<string>PNP0F03</string>
-				<string>PNP0F0B</string>
-				<string>PNP0F0E</string>
-				<string>PNP0F13</string>
-			</array>
-		</dict>
-		<key>ApplePS2Controller</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>org.rehabman.voodoo.driver.PS2Controller</string>
-			<key>IOClass</key>
-			<string>ApplePS2Controller</string>
-			<key>IONameMatch</key>
-			<string>ps2controller</string>
-			<key>IOProviderClass</key>
-			<string>IOPlatformDevice</string>
+			<string>ApplePS2MouseDevice</string>
 			<key>Platform Profile</key>
 			<dict>
-				<key>DELL</key>
-				<dict>
-					<key>SNB-CPT</key>
-					<dict>
-						<key>WakeDelay</key>
-						<integer>0</integer>
-					</dict>
-				</dict>
 				<key>Default</key>
 				<dict>
+					<key>ActLikeTrackpad</key>
+					<false/>
+					<key>ButtonCount</key>
+					<integer>3</integer>
+					<key>DefaultResolution</key>
+					<integer>240</integer>
+					<key>DisableDevice</key>
+					<false/>
+					<key>DisableLEDUpdating</key>
+					<false/>
+					<key>FakeMiddleButton</key>
+					<false/>
+					<key>ForceDefaultResolution</key>
+					<true/>
+					<key>ForceSetResolution</key>
+					<false/>
+					<key>MiddleClickTime</key>
+					<integer>100000000</integer>
+					<key>MouseCount</key>
+					<integer>0</integer>
+					<key>MouseYInverter</key>
+					<integer>1</integer>
+					<key>QuietTimeAfterTyping</key>
+					<integer>500000000</integer>
+					<key>ResolutionMode</key>
+					<integer>3</integer>
+					<key>ScrollResolution</key>
+					<integer>5</integer>
+					<key>ScrollYInverter</key>
+					<integer>1</integer>
+					<key>TrackpadScroll</key>
+					<true/>
 					<key>WakeDelay</key>
-					<integer>10</integer>
+					<integer>1000</integer>
 				</dict>
 				<key>HPQOEM</key>
 				<dict>
@@ -120,43 +125,43 @@
 					<string>ProBook</string>
 					<key>ProBook</key>
 					<dict>
-						<key>WakeDelay</key>
-						<integer>0</integer>
+						<key>ActLikeTrackpad</key>
+						<true/>
+						<key>DisableDevice</key>
+						<true/>
 					</dict>
 				</dict>
 				<key>Lenovo</key>
 				<dict>
 					<key>Haswell-Ideapad</key>
 					<dict>
-						<key>WakeDelay</key>
-						<integer>0</integer>
+						<key>DisableDevice</key>
+						<true/>
 					</dict>
 					<key>U430</key>
 					<string>Haswell-Ideapad</string>
 				</dict>
 			</dict>
-			<key>RM,Build</key>
-			<string>Release-timewalker</string>
-			<key>RM,Version</key>
-			<string>VoodooPS2Controller 1.8.13</string>
+			<key>ProductID</key>
+			<integer>547</integer>
+			<key>USBMouseStopsTrackpad</key>
+			<integer>0</integer>
+			<key>VendorID</key>
+			<integer>1452</integer>
 		</dict>
 	</dict>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.8.13</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>com.apple.iokit.IOACPIFamily</key>
-		<string>1.0.0d1</string>
-		<key>com.apple.kpi.bsd</key>
-		<string>8.0.0</string>
+		<key>com.apple.iokit.IOHIDFamily</key>
+		<string>1.0.0b1</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>8.0.0</string>
+		<string>9.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>8.0.0</string>
+		<string>9.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>8.0.0</string>
-		<key>com.apple.kpi.unsupported</key>
-		<string>8.0.0</string>
+		<string>9.0.0</string>
+		<key>org.rehabman.voodoo.driver.PS2Controller</key>
+		<string>1.8.13</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Console</string>
