--- a/Clover/OEM/Motherboard/config/config-17.plist
+++ b/Clover/OEM/Motherboard/config/config-17.plist
@@ -175,6 +175,16 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
+				<string>Zero out jne chk for 10.7 and 10.11</string>
+				<key>Name</key>
+				<string>AppleHDA</string>
+				<key>Find</key>
+				<data>gxnUEQ==</data>
+				<key>Replace</key>
+				<data>AAAAAA==</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>SSD TRIM</string>
 				<key>Name</key>
 				<string>IOAHCIBlockStorage</string>
