--- a/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Keyboard.kext/Contents/Info.plist
+++ b/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Keyboard.kext/Contents/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14D72i</string>
+	<string>14E11f</string>
 	<key>CFBundleExecutable</key>
 	<string>VoodooPS2Keyboard</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.8.13, Copyright Apple Computer, Inc. 2000-2003, RehabMan 2012-2013</string>
+	<string>1.8.15, Copyright Apple Computer, Inc. 2000-2003, RehabMan 2012-2013</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.rehabman.voodoo.driver.PS2Keyboard</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,21 +21,21 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.8.13</string>
+	<string>1.8.15</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>6A2008a</string>
+	<string>6D1002</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>13F26</string>
+	<string>13F34</string>
 	<key>DTSDKName</key>
 	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0611</string>
+	<string>0631</string>
 	<key>DTXcodeBuild</key>
-	<string>6A2008a</string>
+	<string>6D1002</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>ApplePS2Keyboard</key>
@@ -139,8 +139,6 @@
 							<string>e009=83;Dell Support to Launchpad</string>
 							<string>e06e=70;Map vidmirror key for special mode default is adb90</string>
 						</array>
-						<key>Custom PS2 Map</key>
-						<array/>
 						<key>Function Keys Special</key>
 						<array>
 							<string>;The following 12 items map Fn+fkeys to fkeys</string>
@@ -161,7 +159,7 @@
 							<string>3b=e06e;Map vidmirror key to f1</string>
 							<string>3c=e0f0;Map radio toggle action from EC query to f2</string>
 							<string>3d=e01e;Map touchpad toggle button to f3</string>
-							<string>3e=e005;Map brightness down to f4 </string>
+							<string>3e=e005;Map brightness down to f4</string>
 							<string>3f=e006;Map brightness up to f5</string>
 							<string>40=e0f3;Map acpi RKA3 to f6 keyboard backlight</string>
 							<string>;Fn+f7 no macro</string>
@@ -269,6 +267,8 @@
 					<key>Custom PS2 Map</key>
 					<array>
 						<string>;Items must be strings in the form of scanfrom=scanto (in hex)</string>
+						<string>e027=0;disable discrete fnkeys toggle</string>
+						<string>e028=0;disable discrete trackpad toggle</string>
 					</array>
 					<key>HIDF12EjectDelay</key>
 					<integer>250</integer>
@@ -557,8 +557,10 @@
 					<dict>
 						<key>Breakless PS2</key>
 						<array>
+							<string>e064</string>
 							<string>e065</string>
 							<string>e068</string>
+							<string>e06a</string>
 							<string>e027</string>
 						</array>
 						<key>Custom ADB Map</key>
@@ -567,7 +569,7 @@
 							<string>e064=6b;F14</string>
 							<string>e065=71;F15</string>
 							<string>e068=4f;F18</string>
-							<string>e0f9=65;special F9</string>
+							<string>e0f2=65;special F9</string>
 							<string>e0fb=91;brightness down</string>
 							<string>e0fc=90;brightness up</string>
 							<string>e06a=70;video mirror</string>
@@ -584,7 +586,7 @@
 							<string>e030=e030</string>
 							<string>e064=e064</string>
 							<string>e065=e065</string>
-							<string>e066=e037</string>
+							<string>e066=e028</string>
 							<string>e067=e067</string>
 							<string>e068=e068</string>
 							<string>e069=e0f0</string>
@@ -626,7 +628,7 @@
 							<string>3d=e030</string>
 							<string>3e=e064</string>
 							<string>3f=e065</string>
-							<string>40=e037</string>
+							<string>40=e028</string>
 							<string>41=e067</string>
 							<string>42=e068</string>
 							<string>43=e0f1</string>
@@ -722,7 +724,7 @@
 		<key>com.apple.kpi.unsupported</key>
 		<string>8.0.0</string>
 		<key>org.rehabman.voodoo.driver.PS2Controller</key>
-		<string>1.8.13</string>
+		<string>1.8.15</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Console</string>
